alteração no texto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     <section id="sobre">
         <h2>Sobre Mim</h2>
-        <p>Olá! Sou Hyago, tenho 16 anos, sou um desenvolvedor Front-End, e amo o que faço, além de ser um grande desafio fazer o que faço. Tenho experiência em várias tecnologias, fiz curso de Front-end no Senac registro, e ainda continuo estudando.</p>
+        <p>Olá, sou Hyago Garcia; tenho 16 anos. Sou Desenvolvedor Front-End e amo o que faço! 
+            Além de ser um grande desafio, tenho experiência em diversas tecnologias. Conclui o Curso de Front-End no SENAC/Registro e sigo me aperfeiçoando, estudando e aprendendo.</p>
     </section>
 
     <section id="tecnologias">
