Alteraçâo de nome e local de projeto, do 10 ao 12, que estavam em ordem incorreta

--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +48,8 @@
             transform: translateY(-10px);
         }
 
-        header, footer {
+        header,
+        footer {
             background: #000;
             color: #00aaff;
             text-align: center;
@@ -70,6 +72,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Galeria de Sites</h1>
@@ -86,74 +89,74 @@
             <div class="galeria-container">
                 <!-- Repetir este bloco para cada site -->
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 1/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005338.png" alt="Site 1">
-                        <p>Projeto 1</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 2/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005352.png" alt="Site 2">
-                        <p>Projeto 2</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 3/Landing page 1/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005405.png" alt="Site 3">
-                        <p>Projeto 3</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 4/Cal final/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005432.png" alt="Site 4">
-                        <p>Projeto 4</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 5/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005443.png" alt="Site 5">
-                        <p>Projeto 5</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 6/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005505.png" alt="Site 6">
-                        <p>Projeto 6</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 7/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005516.png" alt="Site 7">
-                        <p>Projeto 7</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Projeto 8/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005534.png" alt="Site 8">
-                        <p>Projeto 8</p>
-                    </a>
-                </div>
-                <div class="site-card">
-                    <a href="Todos projetos/Aula 10/index.html" target="_blank">
-                        <img src="img galeria/Captura de tela 2024-09-13 005553.png" alt="Site 9">
-                        <p>Projeto 9</p>
-                    </a>
-                </div>
-                <div class="site-card">
                     <a href="Todos projetos/Aula 9/formar-grupos/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005602.png" alt="Site 10">
-                        <p>Projeto 10</p>
+                        <p>Projeto 1</p>
                     </a>
                 </div>
                 <div class="site-card">
                     <a href="Todos projetos/Aula 7/agendamento-salao/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005631.png" alt="Site 11">
-                        <p>Projeto 11</p>
+                        <p>Projeto 2</p>
                     </a>
                 </div>
                 <div class="site-card">
                     <a href="Todos projetos/Aula 8/horas-trabalhadas/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005640.png" alt="Site 12">
+                        <p>Projeto 3</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 1/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005338.png" alt="Site 1">
+                        <p>Projeto 4</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 2/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005352.png" alt="Site 2">
+                        <p>Projeto 5</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 3/Landing page 1/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005405.png" alt="Site 3">
+                        <p>Projeto 6</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 4/Cal final/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005432.png" alt="Site 4">
+                        <p>Projeto 7</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 5/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005443.png" alt="Site 5">
+                        <p>Projeto 8</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 6/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005505.png" alt="Site 6">
+                        <p>Projeto 9</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 7/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005516.png" alt="Site 7">
+                        <p>Projeto 10</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Projeto 8/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005534.png" alt="Site 8">
+                        <p>Projeto 11</p>
+                    </a>
+                </div>
+                <div class="site-card">
+                    <a href="Todos projetos/Aula 10/index.html" target="_blank">
+                        <img src="img galeria/Captura de tela 2024-09-13 005553.png" alt="Site 9">
                         <p>Projeto 12</p>
                     </a>
                 </div>
@@ -170,4 +173,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 </body>
+
 </html>
