--- a/Todos projetos/Projeto 8/index.html
+++ b/Todos projetos/Projeto 8/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo da Memória</title>
+    <title>Loja de Peças de Carro</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="game-container">
-        <!-- As cartas serão geradas dinamicamente via JavaScript -->
-    </div>
-    <button id="restart-button">Reiniciar Jogo</button>
+    <header>
+        <h1>Loja de Peças de Carro</h1>
+        <nav>
+            <a href="index.html" id="home-link">Início</a>
+            <a href="cart.html" id="cart-button">
+                Carrinho <i class="fas fa-shopping-cart"></i> (<span id="cart-count">0</span>)
+            </a>
+        </nav>
+    </header>
+    <main>
+        <section id="products-section">
+            <h2>Peças Disponíveis</h2>
+            <div id="products">
+                <div class="product" data-id="1">
+                    <img src="freio.jpg" alt="Freio" class="product-image">
+                    <div class="product-info">
+                        <h3>Freio</h3>
+                        <p class="product-price">R$ 150,00</p>
+                        <button class="add-to-cart">
+                            Adicionar ao Carrinho <i class="fas fa-cart-plus"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="product" data-id="2">
+                    <img src="amortecedor.jpg" alt="Amortecedor" class="product-image">
+                    <div class="product-info">
+                        <h3>Amortecedor</h3>
+                        <p class="product-price">R$ 300,00</p>
+                        <button class="add-to-cart">
+                            Adicionar ao Carrinho <i class="fas fa-cart-plus"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="product" data-id="3">
+                    <img src="bateria.jpg" alt="Bateria" class="product-image">
+                    <div class="product-info">
+                        <h3>Bateria</h3>
+                        <p class="product-price">R$ 200,00</p>
+                        <button class="add-to-cart">
+                            Adicionar ao Carrinho <i class="fas fa-cart-plus"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Loja de Peças de Carro. Todos os direitos reservados.</p>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
