Adicionando imagens ao projeto 8

--- a/Todos projetos/Projeto 8/index.html
+++ b/Todos projetos/Projeto 8/index.html
@@ -23,7 +23,7 @@
             <h2>Peças Disponíveis</h2>
             <div id="products">
                 <div class="product" data-id="1">
-                    <img src="freio.jpg" alt="Freio" class="product-image">
+                    <img src="img/Freio.jpeg" alt="Freio" class="product-image">
                     <div class="product-info">
                         <h3>Freio</h3>
                         <p class="product-price">R$ 150,00</p>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="product" data-id="2">
-                    <img src="amortecedor.jpg" alt="Amortecedor" class="product-image">
+                    <img src="img/Amortecedor.png" alt="Amortecedor" class="product-image">
                     <div class="product-info">
                         <h3>Amortecedor</h3>
                         <p class="product-price">R$ 300,00</p>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="product" data-id="3">
-                    <img src="bateria.jpg" alt="Bateria" class="product-image">
+                    <img src="img/bateria.jpeg" alt="Bateria" class="product-image">
                     <div class="product-info">
                         <h3>Bateria</h3>
                         <p class="product-price">R$ 200,00</p>
