--- a/galeria.html
+++ b/galeria.html
@@ -89,73 +89,73 @@
             <div class="galeria-container">
                 <!-- Repetir este bloco para cada site -->
                 <div class="site-card">
-                    <a href="Todos projetos/Aula 9/formar-grupos/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 1/agendamento-salao/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005602.png" alt="Site 10">
                         <p>Projeto 1</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Aula 7/agendamento-salao/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 2/horas-trabalhadas/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005631.png" alt="Site 11">
                         <p>Projeto 2</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Aula 8/horas-trabalhadas/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 3/formar-grupos/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005640.png" alt="Site 12">
                         <p>Projeto 3</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Aula 10/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 4/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005553.png" alt="Site 9">
                         <p>Projeto 4</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 2/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 5/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005352.png" alt="Site 2">
                         <p>Projeto 5</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 1/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 6/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005338.png" alt="Site 1">
                         <p>Projeto 6</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 3/Landing page 1/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 7/Landing page modal/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005405.png" alt="Site 3">
                         <p>Projeto 7</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 4/Cal final/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 8/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005432.png" alt="Site 4">
                         <p>Projeto 8</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 5/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 9/Cal final/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005443.png" alt="Site 5">
                         <p>Projeto 9</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 6/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 10/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005505.png" alt="Site 6">
                         <p>Projeto 10</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 7/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 11/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005516.png" alt="Site 7">
                         <p>Projeto 11</p>
                     </a>
                 </div>
                 <div class="site-card">
-                    <a href="Todos projetos/Projeto 8/index.html" target="_blank">
+                    <a href="Todos projetos/Projeto 12/index.html" target="_blank">
                         <img src="img galeria/Captura de tela 2024-09-13 005534.png" alt="Site 8">
                         <p>Projeto 12</p>
                     </a>
